Dynamic fields for challenge cost

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/topLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
@@ -12,7 +13,9 @@
         android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:context=".MainActivity">
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        tools:context=".MainActivity" >
 
         <Spinner
             android:id="@+id/atkDiceCount"
@@ -74,7 +77,7 @@
             android:tag="ATTACKER"
             android:text="@string/add_d20"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/atkDiceLabel" />
+            app:layout_constraintTop_toBottomOf="@+id/atkBonusLabel" />
 
         <TextView
             android:id="@+id/atkChallengeRollResult"
@@ -106,7 +109,7 @@
             android:height="19dp"
             android:text="@string/bonus"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/atkChallengeToggle" />
+            app:layout_constraintTop_toBottomOf="@+id/atkDiceLabel" />
 
         <EditText
             android:id="@+id/atkBonusAmount"
@@ -128,7 +131,7 @@
             android:layout_marginTop="28dp"
             android:text="@string/damage_tiers"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/atkBonusLabel" />
+            app:layout_constraintTop_toBottomOf="@+id/atkChallengeToggle" />
 
         <EditText
             android:id="@+id/atkLowDamage"
@@ -216,7 +219,7 @@
             android:layout_marginTop="28dp"
             android:text="@string/damage_tiers"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/defBonusLabel" />
+            app:layout_constraintTop_toBottomOf="@+id/defChallengeToggle" />
 
         <EditText
             android:id="@+id/defLowDamage"
@@ -543,28 +546,6 @@
             app:layout_constraintTop_toTopOf="@+id/defChallengeSetterCheckbox" />
 
         <TextView
-            android:id="@+id/atkCostLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:text="@string/challenge_cost"
-            app:layout_constraintBottom_toBottomOf="@+id/atkChallengeToggle"
-            app:layout_constraintStart_toEndOf="@+id/atkChallengeToggle"
-            app:layout_constraintTop_toTopOf="@+id/atkChallengeToggle" />
-
-        <EditText
-            android:id="@+id/atkChallengeCost"
-            android:layout_width="40dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:ems="10"
-            android:inputType="number"
-            android:maxLength="2"
-            app:layout_constraintBottom_toBottomOf="@+id/atkCostLabel"
-            app:layout_constraintStart_toEndOf="@+id/atkCostLabel"
-            app:layout_constraintTop_toTopOf="@+id/atkCostLabel" />
-
-        <TextView
             android:id="@+id/atkPassDefLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -671,29 +652,7 @@
             android:tag="DEFENDER"
             android:text="@string/add_d20"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/defDiceLabel" />
-
-        <TextView
-            android:id="@+id/defCostLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:text="@string/challenge_cost"
-            app:layout_constraintBottom_toBottomOf="@+id/defChallengeToggle"
-            app:layout_constraintStart_toEndOf="@+id/defChallengeToggle"
-            app:layout_constraintTop_toTopOf="@+id/defChallengeToggle" />
-
-        <EditText
-            android:id="@+id/defChallengeCost"
-            android:layout_width="40dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:ems="10"
-            android:inputType="number"
-            android:maxLength="2"
-            app:layout_constraintBottom_toBottomOf="@+id/defCostLabel"
-            app:layout_constraintStart_toEndOf="@+id/defCostLabel"
-            app:layout_constraintTop_toTopOf="@+id/defCostLabel" />
+            app:layout_constraintTop_toBottomOf="@+id/defBonusLabel" />
 
         <TextView
             android:id="@+id/defBonusLabel"
@@ -703,7 +662,7 @@
             android:layout_marginTop="16dp"
             android:text="@string/bonus"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/defChallengeToggle" />
+            app:layout_constraintTop_toBottomOf="@+id/defDiceLabel" />
 
         <Spinner
             android:id="@+id/defDiceCount"
