--- a/app/src/main/res/layout/bonus_group.xml
+++ b/app/src/main/res/layout/bonus_group.xml
@@ -1,23 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/challengeCostGroup" >
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/bonusGroup"
+    android:gravity="center_vertical" >
     <TextView
-        android:id="@+id/challengeCostLabel"
+        android:id="@+id/bonusLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:text="@string/challenge_cost"
-        android:tag="@string/challenge_cost_label_tag" />
+        android:text="@string/bonus"
+        android:tag="@string/bonus_label_tag" />
+
     <EditText
-        android:id="@+id/challengeCost"
+        android:id="@+id/bonusAmount"
         android:layout_width="40dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:ems="10"
         android:inputType="number"
-        android:maxLength="2"
-        android:tag="@string/challenge_cost_field_tag" />
+        android:maxLength="3"
+        android:tag="@string/bonus_value_tag" />
 </LinearLayout>
