--- a/app/src/main/res/layout/dice_count.xml
+++ b/app/src/main/res/layout/dice_count.xml
@@ -11,16 +11,18 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:text="@string/dice_question"
-         />
+        android:tag="@string/dice_label_tag" />
     <Spinner
         android:id="@+id/atkDiceCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp" />
+        android:layout_marginStart="16dp"
+        android:tag="@string/dice_count_tag" />
     <TextView
         android:id="@+id/atkDiceType"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:text="@string/dice_d6" />
+        android:text="@string/dice_d6"
+        android:tag="@string/dice_type_tag" />
 </LinearLayout>
