--- a/app/src/main/res/layout/dice.xml
+++ b/app/src/main/res/layout/dice.xml
@@ -3,50 +3,47 @@
     android:orientation="horizontal"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:id="@+id/challengeGroup"
+    android:id="@+id/diceGroup"
     android:gravity="center_vertical" >
-    <CheckBox
-        android:id="@+id/challengeToggle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:onClick="toggleChallenge"
-        android:tag="@string/challenge_toggle_tag"
-        android:text="@string/add_d20" />
     <TextView
-        android:id="@+id/challengeCostLabel"
+        android:id="@+id/diceCountLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:text="@string/challenge_cost"
-        android:tag="@string/challenge_cost_tag"
+        android:text="@string/dice_question"
+        android:tag="@string/dice_roll_tag"
+        android:visibility="visible"/>
+    <Spinner
+        android:id="@+id/diceCount"
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:tag="@string/dice_roll_tag"
+        android:visibility="visible"/>
+    <TextView
+        android:id="@+id/diceType"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="@string/dice_d6"
+        android:tag="@string/dice_roll_tag"
+        android:visibility="visible"/>
+    <TextView
+        android:id="@+id/diceSetLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="@string/dice_set_label"
+        android:tag="@string/dice_set_tag"
         android:visibility="gone"/>
     <EditText
-        android:id="@+id/challengeCost"
+        android:id="@+id/diceSetterValue"
         android:layout_width="40dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:ems="10"
         android:inputType="number"
         android:maxLength="2"
-        android:tag="@string/challenge_cost_tag"
-        android:visibility="gone"/>
-    <TextView
-        android:id="@+id/challengeSetterLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="@string/challenge_set"
-        android:tag="@string/challenge_set_tag"
-        android:visibility="gone"/>
-    <EditText
-        android:id="@+id/challengeSetterValue"
-        android:layout_width="40dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:ems="10"
-        android:inputType="number"
-        android:maxLength="2"
-        android:tag="@string/challenge_set_tag"
+        android:tag="@string/dice_set_tag"
         android:visibility="gone"/>
 </LinearLayout>
