--- a/app/src/main/res/layout/dynamic_form.xml
+++ b/app/src/main/res/layout/dynamic_form.xml
@@ -22,12 +22,8 @@
             android:text="@string/attacker_section_label"
             android:textSize="20sp"/>
 
-        <include android:id="@+id/atkDiceGroup"
-            layout="@layout/dice"/>
-        <include android:id="@+id/atkBonusGroup"
-            layout="@layout/bonus_group"/>
-        <include android:id="@+id/atkChallengeGroup"
-            layout="@layout/challenge_toggle"/>
+        <include android:id="@+id/atkRollGroup"
+            layout="@layout/roll_group"/>
         <include android:id="@+id/atkDamageGroup"
             layout="@layout/damage_group"/>
         <include android:id="@+id/atkDefenseGroup"
@@ -46,14 +42,8 @@
 
         <include android:id="@+id/defOptionGroup"
             layout="@layout/def_option_selector"/>
-        <include android:id="@+id/defDiceGroup"
-            layout="@layout/dice"
-            android:visibility="gone"/>
-        <include android:id="@+id/defBonusGroup"
-            layout="@layout/bonus_group"
-            android:visibility="gone"/>
-        <include android:id="@+id/defChallengeGroup"
-            layout="@layout/challenge_toggle"
+        <include android:id="@+id/defRollGroup"
+            layout="@layout/roll_group"
             android:visibility="gone"/>
         <include android:id="@+id/defDamageGroup"
             layout="@layout/damage_group"
